--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1,6 +1,6 @@
-body {
+/* body { */
   /* Brookwater Labs Blue */
-  --accent-color: #004e92;
+/*   --accent-color: #004e92;
 }
 a, .navigation a, .site-title {
   color: var(--accent-color) !important;
@@ -12,3 +12,4 @@ a, .navigation a, .site-title {
   background-color: var(--accent-color) !important;
   color: #fff !important;
 }
+ */
